feat: add time approximation to status display
Signed-off-by: Octol1ttle <l1ttleofficial@outlook.com>